# DFSI-for-Diffusion-Based-Visual-Navigation

./: AGENTS.md  Dockerfile  README.md  models.yaml  publish_cmd.py.bak  publish_image.py  pyproject.toml  robot.yaml  visualize.py
config/: camera_front.yaml  camera_reverse.yaml  cmd_vel_mux.yaml  joystick.yaml
scripts/: publish_cmd.py
src/visualnav_transformer/deployment/src/: costmap_cfg.py  create_topomap.py  deployment_environment.yml  guide.py  joy_teleop.py  joy_teleop.sh  map_adapter_rclpy.py  map_adapter_rclpy_esdf_safety_fix.py  navigate.py  navigate_esdf_safety.py  navigate_esdf_safety_visual_1.py  pd_controller.py  record_bag.sh  tsdf_cost_map.py  utils.py  vint_locobot.launch
src/visualnav_transformer/train/: README.md  data_split.py  process_bag_diff.py  process_bags.py  process_recon.py  setup.py  train_environment.yml
src/visualnav_transformer/train/config/: late_fusion.yaml
visual/: bev_tsdf_costmap_viz.py  bev_tsdf_costmap_viz_color.py  visualize_nomad.py  visualize_nomad_1.py  visualize_nomad_vs_pathguide.py  visualize_nomad_vs_pathguide_odom.py
visualnav_transformer/deployment/: deployment_environment.yaml
visualnav_transformer/deployment/src/: explore.py  map_adapter_rclpy_esdf.py  map_adapter_rclpy_esdf_safety.py  navigate_esdf.py  navigate_esdf_safety_fix.py  navigate_esdf_safety_visual.py  ros_data.py  topic_names.py
visualnav_transformer/train/: train.py
visualnav_transformer/train/config/: gnm.yaml  vint.yaml
visualnav_transformer/train/vint_train/data/: data_utils.py  vint_dataset.py
(+17 files in other folders)
